--- a/DrawingRecognizer.UI/src/app/page.module.css
+++ b/DrawingRecognizer.UI/src/app/page.module.css
@@ -2,20 +2,12 @@
   padding: 80px 20px; /* Increased padding for more space around content */
   text-align: center;
 }
-
-.content {
-  margin-top: 40px; /* Increased space between sections */
-  padding: 40px 320px; /* Extra padding to make the content area spacious */
-  background: linear-gradient(135deg, #2c2c2c, #121212); /* Subtle gradient to distinguish content */
-  border-radius: 10px; /* Rounded corners for content */
-  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2); /* Soft shadow to lift content */
-}
-
 .content p {
   margin-bottom: 130px;
 }
 
 .startButton {
+  margin-top: 20px;
   padding: 12px 24px;
   font-size: 1.1rem;
   background: linear-gradient(135deg, #6a0dad, #d511b1); /* Gradient from purple to a darker purple */
